--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico">
     <title>Filippo Saretta</title>
 </head>
 <body>
     <header>
         <div class="menu">
-            <div><a href="#intro">Home</a></div>
-            <div><a href="#contatti">Contatti</a></div>
-            <div><a href="#lavoro">Lavoro</a></div>
-            <div><a href="#formazione">Formazione</a></div>
-            <div><a href="#skills">Skills</a></div>
+            <div>Home</div>
+            <div><a href="contacts.html">Contatti</a></div>
+            <div><a href="work.html">Lavoro</a></div>
+            <div><a href="formazione.html">Formazione</a></div>
+            <div><a href="skills.html">Skills</a></div>
         </ul>
     </header>
-    <a name="intro"></a>
     <div class="title" name="intro">
         <h1>Filippo Saretta</h1>
     </div>
@@ -33,112 +33,6 @@
             <p>Mi piacerebbe unire le mie conoscenze ingegneristiche, di App e</p>
             <p>Blockchain per portare <span class="greenBold">innovazione</span> al settore sanitario.</p>
         </div>
-    </div>
-    <a name="contatti"></a>
-    <div class="contacts">
-        <div class="categorie">
-            <h2>Contatti</h2>
-        </div>
-        <p><span class="greenBold">Telefono</span> : 123 4567890</p>
-        <p><span class="greenBold">E-mail</span> : mailDiProva@gmail.com</p>
-        <p><span class="greenBold">Residenza</span> : Padova, Italia</p>
-        <p><a href="https://www.linkedin.com/in/filipposaretta/" style="text-decoration: none;">LinkedIn</a></p>
-        <p><a href="https://github.com/filipposaretta" style="text-decoration: none;">GitHub</a></p>
-    </div>
-    <a name="lavoro"></a>
-    <div class="activities">
-        <div class="categorie">
-            <h2>Esperienze Lavorative</h2>
-        </div>
-        <div class="descrizione">
-            <div class="activity">
-                <div class="intro-activity">
-                    <p class="greenBold">Product Specialist</p>
-                    <p>Dal: 09/2021 a oggi</p>
-                </div>
-                <p style="font-weight: bold;">Kaltek S.r.l.</p>
-                <p>Seguo la progettazione dei prototipi, le certificazioni e le demo.
-                    Sviluppo i software di alcuni strumenti (vincendo delle gare contro
-                    aziende multinazionali) tramite PLC e HMI.
-                    Gestisco le fiere e le attività marketing aziendali (sito web, video 3D).
-                </p>
-            </div> 
-            <hr>
-            <div class="activity">
-                <div class="intro-activity">
-                    <p class="greenBold">Assegnista di Ricerca</p>
-                    <p>Dal: 01/2021 al 08/2021</p>
-                </div>
-                <p style="font-weight: bold;">Università degli Studi di Padova</p>
-                <p>Ho lavorato nel laboratorio di Biologia Molecolare (CRIBI) nel campo della
-                    bioinformatica applicando delle pipeline a dati RNA-seq.</p>
-            </div>
-            <hr>
-            <div class="activity">
-                <div class="intro-activity">
-                    <p class="greenBold">Giudice Arbitro e Arbitro di Sedia</p>
-                    <p>Dal: 04/2013 al 05/2022</p>
-                </div>
-                <p style="font-weight: bold;">Federazione Italiana Tennis (FIT)</p>
-                <P>Ho gestito importanti manifestazioni nazionali di Tennis, Padel e
-                    Wheelchair Tennis.</P>
-            </div>
-        </div>
-    </div>
-    <a name="formazione"></a>
-    <div class="activities">
-        <div class="categorie">
-            <h2>Istruzione e Formazione</h2>
-        </div>
-        <div class="activity">
-            <div class="intro-activity">
-                <p class="greenBold">Corso di App Developer</p>
-                <p>Dal 02/2022 ad oggi</p>
-            </div>
-            <p style="font-weight: bold;">Veneto Formazione</p>
-            <p>Studio il Framework Flutter e il linguaggio di programmazione Dart.
-                Potrò sviluppare App per Smartphone, Computer, Smartwatch, ...
-            </p>
-        </div>
-        <hr>
-        <div class="activity">
-            <div class="intro-activity">
-                <p class="greenBold">Corso di Blockchain Developer e Web Developer</p>
-                <p>Dal 01/2022 ad oggi</p>
-            </div>
-            <p style="font-weight: bold;">Start2Impact</p>
-            <p>Studio Solidity, Python, DJango, MongoDB, Ganache, Web3js,...</p>
-        </div>
-        <hr>
-        <div class="activity">
-            <div class="intro-activity">
-                <p class="greenBold">Laurea Magistrale in Bioingegneria</p>
-                <p>Dal 2018 al 2020</p>
-            </div>
-            <p style="font-weight: bold;">Università degli Studi di Padova</p>
-            <p>Tesi: Quantificazione e caratterizzazione delle popolazioni cellulari nei
-                tumori tramite scRNA-sequencing.
-            </p>
-        </div>
-        <hr>
-        <div class="activity">
-            <div class="intro-activity">
-                <p class="greenBold">Laurea Triennale in Ingegneria Biomedica</p>
-                <p>Dal 2014 al 2018</p>
-            </div>
-            <p style="font-weight: bold;">Università degli Studi di Padova</p>
-            <p>Tesi: Sostituti cutanei: materiali naturali e sintetici a confronto</p>
-        </div>
-    </div>
-    <a name="Skills"></a>
-    <div class="activities">
-        <div class="categorie">
-            <h2>Soft Skills</h2>
-        </div>
-        <p>Problem Solving</p>
-        <p>Team work</p>
-        <p>Autonomia</p>
-        <p>Puntare agli obiettivi</p>
     </div>
     <footer>
         <h3>Contattatemi per qualsiasi domanda o curiosità, sarò felice di aiutarvi con il mio lavoro!</h3>
